--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 # ------------------------------------------------------------------
 /web/sites/*/settings*.php
 /web/sites/*/services*.yml
+!/web/sites/default/settings.php
 
 # Ignore paths that contain user-generated content.
 /web/sites/*/files
@@ -51,7 +52,7 @@
 # Sites that do not have any Composer-managed custom modules may
 # delete all of the `modules/custom` lines below.
 # ------------------------------------------------------------------
-/web/modules/custom/*
+#/web/modules/custom/*
 #!/web/modules/custom/module_in_repo
 
 
