--- a/web/modules/custom/giv_din_stemme/giv_din_stemme.info.yml
+++ b/web/modules/custom/giv_din_stemme/giv_din_stemme.info.yml
@@ -1,4 +1,4 @@
 name: "Giv din stemme"
 description: 'Giv din stemme module'
 type: module
-core_version_requirement: ^10 || ^11
+core_version_requirement: ^11
