--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@symfony/webpack-encore": "^4.6.1",
+    "@tailwindcss/forms": "^0.5.7",
     "babel-loader": "^9.1.3",
     "babel-plugin-prismjs": "^2.1.0",
     "eslint": "^9.3.0",
