--- a/web/modules/custom/giv_din_stemme/giv_din_stemme.routing.yml
+++ b/web/modules/custom/giv_din_stemme/giv_din_stemme.routing.yml
@@ -4,6 +4,7 @@ giv_din_stemme.landing:
     - 'GET'
   defaults:
     _controller: '\Drupal\giv_din_stemme\Controller\GivDinStemmeController::landing'
+    _title: 'Donér din stemme'
   requirements:
     _permission: 'access content'
 
@@ -13,6 +14,7 @@ giv_din_stemme.consent:
     - 'GET'
   defaults:
     _controller: '\Drupal\giv_din_stemme\Controller\GivDinStemmeController::consent'
+    _title: 'Samtykke'
   requirements:
     _permission: 'access content'
 
@@ -23,6 +25,7 @@ giv_din_stemme.profile:
     - 'POST'
   defaults:
     _form: '\Drupal\giv_din_stemme\Form\GivDinStemmeProfileForm'
+    _title: 'Profil'
   requirements:
     _permission: 'access content'
 
@@ -32,6 +35,7 @@ giv_din_stemme.permissions:
     - 'GET'
   defaults:
     _controller: '\Drupal\giv_din_stemme\Controller\GivDinStemmeController::permissions'
+    _title: 'Tilladelser'
   requirements:
     _permission: 'access content'
 
@@ -41,6 +45,7 @@ giv_din_stemme.test:
     - 'GET'
   defaults:
     _controller: '\Drupal\giv_din_stemme\Controller\GivDinStemmeController::test'
+    _title: 'Test'
   requirements:
     _permission: 'access content'
 
@@ -50,6 +55,7 @@ giv_din_stemme.donate:
     - 'GET'
   defaults:
     _controller: '\Drupal\giv_din_stemme\Controller\GivDinStemmeController::donate'
+    _title: 'Donér'
   requirements:
     _permission: 'access content'
 
@@ -59,6 +65,7 @@ giv_din_stemme.show:
     - 'GET'
   defaults:
     _controller: '\Drupal\giv_din_stemme\Controller\GivDinStemmeController::show'
+    _title: 'Indtal'
   requirements:
     _permission: 'access content'
 
@@ -68,6 +75,7 @@ giv_din_stemme.audio_process:
     - 'POST'
   defaults:
     _controller: '\Drupal\giv_din_stemme\Controller\GivDinStemmeController::process'
+    _title: 'Indtal'
   requirements:
     _permission: 'access content'
 
