--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,20 @@
     "repositories": [
         {
             "type": "composer",
-            "url": "https://packages.drupal.org/8"
+            "url": "https://packages.drupal.org/8",
+            "exclude": [
+                "drupal/openid_connect"
+            ]
+        },
+        {
+            "type": "git",
+            "url": "https://git.drupalcode.org/issue/openid_connect-3452009.git"
         }
     ],
     "require": {
+        "chx/drupal-issue-fork": "dev-main",
         "composer/installers": "^2.0",
+        "cweagans/composer-patches": "^1.7",
         "drupal/core-composer-scaffold": "^11.0",
         "drupal/core-project-message": "^11.0",
         "drupal/core-recommended": "^11.0",
@@ -23,12 +32,12 @@
         "drupal/pathauto": "^1.13",
         "drupal/twig_tweak": "^3.4",
         "drush/drush": "^13.0",
-        "cweagans/composer-patches": "^1.7"
+        "drupal/openid_connect": "dev-3452009-drupal-11-compatibility"
     },
     "conflict": {
         "drupal/drupal": "*"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
         "allow-plugins": {
@@ -38,7 +47,8 @@
             "phpstan/extension-installer": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "php-http/discovery": true,
-            "cweagans/composer-patches": true
+            "cweagans/composer-patches": true,
+            "chx/drupal-issue-fork": true
         },
         "sort-packages": true
     },
@@ -101,7 +111,7 @@
         "enable-patching": true,
         "patches": {
             "drupal/core": {
-              "Disable forced configuration langcode (https://www.drupal.org/project/drupal/issues/3150540)": "https://www.drupal.org/files/issues/2024-07-03/drupal-3150540-42.patch"
+                "Disable forced configuration langcode (https://www.drupal.org/project/drupal/issues/3150540)": "https://www.drupal.org/files/issues/2024-07-03/drupal-3150540-42.patch"
             }
         }
     }
