--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -12,10 +12,12 @@ module:
   file: 0
   filter: 0
   giv_din_stemme: 0
+  itk_openid_connect_interpreter: 0
   language: 0
   locale: 0
   mysql: 0
   node: 0
+  openid_connect: 0
   page_cache: 0
   path: 0
   path_alias: 0
@@ -27,6 +29,7 @@ module:
   update: 0
   user: 0
   pathauto: 1
+  externalauth: 10
   minimal: 1000
 theme:
   stark: 0
