--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -2,14 +2,14 @@ _core:
   default_config_hash: HlN7eAN2N4JIHsYv56V4E7sqC9bS609KwvGFjyD_mgk
 langcode: da
 uuid: 1ef393ee-f23f-4df7-9e77-dc45afb41d4a
-name: 'Doner din stemme'
+name: 'Drush Site-Install'
 mail: admin@example.com
 slogan: ''
 page:
   403: ''
   404: ''
-  front: /landing-page
+  front: /user/login
 admin_compact_mode: false
 weight_select_max: 100
 default_langcode: da
-mail_notification: null
+mail_notification: ''
