--- a/web/modules/custom/itk_openid_connect_interpreter/itk_openid_connect_interpreter.info.yml
+++ b/web/modules/custom/itk_openid_connect_interpreter/itk_openid_connect_interpreter.info.yml
@@ -2,3 +2,5 @@ name: "ITK openid connect interpreter"
 description: 'Uses openid connect hooks to alter openid connect processes and match specific ITK use cases.'
 type: module
 core_version_requirement: ^11
+dependencies:
+  - openid_connect:openid_connect
