--- a/docker-compose.server.oidc.yml
+++ b/docker-compose.server.oidc.yml
@@ -1,24 +1,14 @@
 services:
-  node:
-    image: node:18
-    profiles:
-      - dev
-    working_dir: /app
-    volumes:
-      - .:/app:delegated
-
   idp-citizen:
     image: ghcr.io/soluto/oidc-server-mock:0.8.6
-    profiles:
-      - oidc
-      - test
     # Let this container be accessible both internally and externally on the same domain.
-    container_name: idp-citizen.${COMPOSE_DOMAIN}
+    container_name: idp-citizen.${COMPOSE_SERVER_DOMAIN}
     networks:
       - app
       - frontend
     ports:
       # https://github.com/Soluto/oidc-server-mock?tab=readme-ov-file#https
+      # Traefik redirects http to https.
       # - '80'
       - '443'
     volumes:
@@ -26,12 +16,13 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=frontend"
-      - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_idp-citizen.rule=Host(`idp-citizen.${COMPOSE_DOMAIN}`)"
-      - "traefik.http.services.${COMPOSE_PROJECT_NAME}_idp-citizen.loadbalancer.server.port=443"
-      - "traefik.http.services.${COMPOSE_PROJECT_NAME}_idp-citizen.loadbalancer.server.scheme=https"
-      - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_idp-citizen.middlewares=redirect-to-https"
+      - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_idp_citizen.rule=Host(`idp-citizen.${COMPOSE_SERVER_DOMAIN}`)"
+      - "traefik.http.services.${COMPOSE_PROJECT_NAME}_idp_citizen.loadbalancer.server.port=443"
+      - "traefik.http.services.${COMPOSE_PROJECT_NAME}_idp_citizen.loadbalancer.server.scheme=https"
+      - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_idp_citizen-http.middlewares=redirect-to-https"
       - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
-
+      - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_idp_citizen.entrypoints=websecure"
+      - "traefik.http.routers.${COMPOSE_PROJECT_NAME}_idp_citizen-http.entrypoints=web"
     environment:
       # https://github.com/Soluto/oidc-server-mock?tab=readme-ov-file#https
       ASPNETCORE_URLS: https://+:443;http://+:80
@@ -121,4 +112,22 @@ services:
             ValueType: string
           - Type: uuid
             Value: '11111111-1111-1111-1111-111111111111'
+            ValueType: string
+
+        - SubjectId: 2
+          Username: citizen2
+          Password: citizen2
+          Claims:
+            # Claims added here must be defined above in IDENTITY_RESOURCES_INLINE
+          - Type: dk_ssn
+            Value: '2222222222'
+            ValueType: string
+          - Type: name
+            Value: Benny Bomstærk
+            ValueType: string
+          - Type: zip
+            Value: '2222'
+            ValueType: string
+          - Type: uuid
+            Value: '22222222-2222-2222-2222-222222222222'
             ValueType: string
