--- a/config/sync/openid_connect.client.connection.yml
+++ b/config/sync/openid_connect.client.connection.yml
@@ -10,9 +10,9 @@ settings:
   client_secret: '[client-secret]'
   iss_allowed_domains: ''
   issuer_url: ''
-  authorization_endpoint: 'http://idp-citizen.givdinstemme.local.itkdev.dk/connect/authorize'
-  token_endpoint: 'http://idp-citizen.givdinstemme.local.itkdev.dk/connect/token'
-  userinfo_endpoint: 'http://idp-citizen.givdinstemme.local.itkdev.dk/connect/userinfo'
-  end_session_endpoint: 'http://idp-citizen.givdinstemme.local.itkdev.dk/connect/endsession'
+  authorization_endpoint: 'https://idp-citizen.givdinstemme.local.itkdev.dk/connect/authorize'
+  token_endpoint: 'https://idp-citizen.givdinstemme.local.itkdev.dk/connect/token'
+  userinfo_endpoint: 'https://idp-citizen.givdinstemme.local.itkdev.dk/connect/userinfo'
+  end_session_endpoint: 'https://idp-citizen.givdinstemme.local.itkdev.dk/connect/endsession'
   scopes:
     - openid
