Added voice permission

--- a/web/modules/custom/giv_din_stemme/giv_din_stemme.libraries.yml
+++ b/web/modules/custom/giv_din_stemme/giv_din_stemme.libraries.yml
@@ -2,3 +2,7 @@ giv_din_stemme:
   version: 1.x
   js:
     js/giv_din_stemme.js: {}
+
+check_microphone:
+  js:
+    js/checkMicrophonePermission.js: {}
