--- a/config/sync/openid_connect.settings.yml
+++ b/config/sync/openid_connect.settings.yml
@@ -5,8 +5,8 @@ connect_existing_users: true
 override_registration_settings: false
 end_session_enabled: true
 user_login_display: above
-redirect_login: user
-redirect_logout: user
+redirect_login: profile
+redirect_logout: landing-page
 userinfo_mappings:
   timezone: zoneinfo
 role_mappings: {  }
