--- a/config/sync/user.settings.yml
+++ b/config/sync/user.settings.yml
@@ -2,7 +2,7 @@ _core:
   default_config_hash: '-htDFWUv1S4OlJMzta2nhFl4QbhJvu0D9xsJ-clxo-M'
 langcode: da
 anonymous: Anonym
-verify_mail: true
+verify_mail: false
 notify:
   cancel_confirm: true
   password_reset: true
@@ -13,6 +13,6 @@ notify:
   register_no_approval_required: true
   register_pending_approval: true
 register: visitors
-cancel_method: user_cancel_block
+cancel_method: user_cancel_reassign
 password_reset_timeout: 86400
 password_strength: true
