Added functionality for frontpage variables

--- a/web/modules/custom/giv_din_stemme/giv_din_stemme.services.yml
+++ b/web/modules/custom/giv_din_stemme/giv_din_stemme.services.yml
@@ -9,3 +9,6 @@ services:
       - '@database'
       - '@file_system'
       - '@settings'
+  Drupal\giv_din_stemme\Helper\Helper:
+    arguments:
+      - '@entity_type.manager'
