--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -10,8 +10,7 @@
   <exclude-pattern>vendor</exclude-pattern>
   <exclude-pattern>web/modules/custom/*/build/</exclude-pattern>
   <exclude-pattern>web/themes/custom/*/build/</exclude-pattern>
-  <exclude-pattern>web/modules/custom/itk_admin_links/css/itk-admin-links.css</exclude-pattern>
-  <exclude-pattern>web/modules/custom/hoeringsportal_project_timeline/assets/public/build/project-timeline.css</exclude-pattern>
+  <exclude-pattern>*.css</exclude-pattern>
   <exclude-pattern>*.js</exclude-pattern>
 
   <arg value="p"/>
