--- a/web/modules/custom/giv_din_stemme/giv_din_stemme.services.yml
+++ b/web/modules/custom/giv_din_stemme/giv_din_stemme.services.yml
@@ -5,10 +5,10 @@ services:
   giv_din_stemme.controller:
     class: 'Drupal\giv_din_stemme\Helper\GivDinStemmeController'
     arguments:
-      - '@giv_din_stemme.audio_helper'
       - '@database'
       - '@file_system'
       - '@settings'
   Drupal\giv_din_stemme\Helper\Helper:
     arguments:
       - '@entity_type.manager'
+      - '@uuid'
