--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -3,6 +3,7 @@ langcode: da
 status: true
 dependencies:
   module:
+    - giv_din_stemme
     - system
 _core:
   default_config_hash: dJ0L2DNSj5q6XVZAGsuVDpJTh5UeYkIPwKrUOOpr8YI
@@ -12,4 +13,5 @@ weight: 1
 is_admin: false
 permissions:
   - 'access content'
+  - 'access giv din stemme'
   - 'cancel account'
