--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "drupal/paragraphs": "^1.18",
         "drupal/pathauto": "^1.13",
         "drupal/twig_tweak": "^3.4",
-        "drush/drush": "^13.0"
+        "drush/drush": "^13.0",
+        "itk-dev/web_accessibility_statement": "dev-feature/drupal-11-support"
     },
     "require-dev": {
         "drupal/core-dev": "^11.0",
