--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -30,6 +30,7 @@ module:
   twig_tweak: 0
   update: 0
   user: 0
+  web_accessibility_statement: 0
   pathauto: 1
   externalauth: 10
   minimal: 1000
