--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -7,6 +7,7 @@ dependencies:
     - node.type.text
   module:
     - filter
+    - itk_admin
     - locale
     - node
     - system
@@ -18,6 +19,7 @@ is_admin: false
 permissions:
   - 'access administration pages'
   - 'access content overview'
+  - 'access itk admin settings'
   - 'access site in maintenance mode'
   - 'access toolbar'
   - 'access user profiles'
