Changed user fields

--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -38,7 +38,7 @@ content:
     weight: 35
     region: content
     settings:
-      placeholder: ''
+      placeholder: 'Indtast e-mail'
       size: 60
     third_party_settings: {  }
   field_gender:
