--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "@symfony/webpack-encore": "^4.6.1",
     "@tailwindcss/forms": "^0.5.7",
     "babel-loader": "^9.1.3",
-    "babel-plugin-prismjs": "^2.1.0",
     "eslint": "^9.3.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^17.7.0",
     "eslint-plugin-promise": "^6.1.1",
+    "extendable-media-recorder": "^9.2.10",
+    "extendable-media-recorder-wav-encoder": "^7.0.114",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "prismjs": "^1.29.0",
     "tailwindcss": "^3.4.3",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
