--- a/docker-compose.server.override.yml
+++ b/docker-compose.server.override.yml
@@ -2,6 +2,6 @@ services:
   phpfpm:
     environment:
       - PHP_OPCACHE_VALIDATE_TIMESTAMPS=0
-      - PHP_PM_TYPE="static"
+      - PHP_PM_TYPE=static
       - PHP_PM_MAX_CHILDREN=24
       - PHP_PM_MAX_REQUESTS=10000
