--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -4,6 +4,8 @@ status: true
 dependencies:
   module:
     - giv_din_stemme
+    - key_auth
+    - rest
     - system
 _core:
   default_config_hash: dJ0L2DNSj5q6XVZAGsuVDpJTh5UeYkIPwKrUOOpr8YI
@@ -15,3 +17,5 @@ permissions:
   - 'access content'
   - 'access giv din stemme'
   - 'cancel account'
+  - 'restful get giv_din_stemme'
+  - 'use key authentication'
