--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "drupal/core-composer-scaffold": "^11.0",
         "drupal/core-project-message": "^11.0",
         "drupal/core-recommended": "^11.0",
+        "drupal/jsonapi_extras": "^3.26@beta",
+        "drupal/key_auth": "^2.2",
         "drupal/openid_connect": "dev-3452009-drupal-11-compatibility",
         "drupal/paragraphs": "^1.18",
         "drupal/pathauto": "^1.13",
