--- a/config/sync/jsonapi_extras.jsonapi_resource_config.gds--gds.yml
+++ b/config/sync/jsonapi_extras.jsonapi_resource_config.gds--gds.yml
@@ -32,7 +32,7 @@ resourceFields:
     fieldName: file
     publicName: file
     enhancer:
-      id: url_link
+      id: file_reference_field
       settings:
         absolute_url: '1'
   user_hash:
