--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -3,6 +3,7 @@ langcode: da
 status: true
 dependencies:
   module:
+    - key_auth
     - system
 _core:
   default_config_hash: j5zLMOdJBqC0bMvSdth5UebkprJB8g_2FXHqhfpJzow
@@ -12,3 +13,4 @@ weight: 0
 is_admin: false
 permissions:
   - 'access content'
+  - 'use key authentication'
