--- a/config/sync/editor.editor.simpel_html.yml
+++ b/config/sync/editor.editor.simpel_html.yml
@@ -20,11 +20,14 @@ settings:
       - blockQuote
       - '|'
       - sourceEditing
+      - drupalInsertImage
   plugins:
     ckeditor5_heading:
       enabled_headings:
         - heading2
         - heading3
+    ckeditor5_imageResize:
+      allow_resize: true
     ckeditor5_list:
       properties:
         reversed: true
@@ -33,4 +36,10 @@ settings:
     ckeditor5_sourceEditing:
       allowed_tags: {  }
 image_upload:
-  status: false
+  status: true
+  scheme: public
+  directory: inline-images
+  max_size: null
+  max_dimensions:
+    width: null
+    height: null
