--- a/config/sync/filter.format.simpel_html.yml
+++ b/config/sync/filter.format.simpel_html.yml
@@ -12,7 +12,7 @@ filters:
     status: true
     weight: -10
     settings:
-      allowed_html: '<br> <p> <h2> <h3> <strong> <em> <blockquote> <a href> <ul> <ol reversed start> <li>'
+      allowed_html: '<br> <p> <h2> <h3> <strong> <em> <blockquote> <a href> <ul> <ol reversed start> <li> <img src alt height width data-entity-uuid data-entity-type>'
       filter_html_help: false
       filter_html_nofollow: false
   filter_htmlcorrector:
