--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -15,5 +15,7 @@ is_admin: false
 permissions:
   - 'access content'
   - 'access giv din stemme'
+  - 'access giv din stemme api'
+  - 'access giv din stemme view'
   - 'cancel account'
   - 'use key authentication'
