--- a/web/modules/custom/giv_din_stemme/giv_din_stemme.services.yml
+++ b/web/modules/custom/giv_din_stemme/giv_din_stemme.services.yml
@@ -14,3 +14,7 @@ services:
       - '@uuid'
       - '@state'
       - '@lock'
+  giv_din_stemme.route_subscriber:
+    class: 'Drupal\giv_din_stemme\Routing\RouteSubscriber'
+    tags:
+      - { name: event_subscriber }
