--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -1,7 +1,6 @@
 _core:
   default_config_hash: 4GIX5Esnc_umpXUBj4IIocRX7Mt5fPhm4AgXfE3E56E
 module:
-  basic_auth: 0
   block: 0
   breakpoint: 0
   ckeditor5: 0
@@ -17,6 +16,7 @@ module:
   itk_admin: 0
   itk_openid_connect_interpreter: 0
   jsonapi: 0
+  jsonapi_defaults: 0
   jsonapi_extras: 0
   key_auth: 0
   language: 0
@@ -28,8 +28,6 @@ module:
   page_cache: 0
   path: 0
   path_alias: 0
-  rest: 0
-  restui: 0
   serialization: 0
   system: 0
   text: 0
