Added logging and user feedback

--- a/web/modules/custom/giv_din_stemme/giv_din_stemme.services.yml
+++ b/web/modules/custom/giv_din_stemme/giv_din_stemme.services.yml
@@ -1,4 +1,8 @@
 services:
+  logger.channel.giv_din_stemme:
+    parent: logger.channel_base
+    arguments: [ 'giv_din_stemme' ]
+
   giv_din_stemme.audio_helper:
     class: 'Drupal\giv_din_stemme\Helper\AudioHelper'
 
