--- a/docker-compose.server.override.yml
+++ b/docker-compose.server.override.yml
@@ -7,7 +7,8 @@ services:
       - PHP_PM_MAX_REQUESTS=10000
       - PHP_POST_MAX_SIZE=18M
       - PHP_UPLOAD_MAX_FILESIZE=15M
-
+      - PHP_POST_MAX_SIZE=18M
+      - PHP_UPLOAD_MAX_FILESIZE=15M
   nginx:
     environment:
       - NGINX_MAX_BODY_SIZE=20M
