Add validated to gds entity

--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,8 @@
 
 # Ignore .env files as they are personal
 #/.env
+/.env.local
+/.env.*.local
 
 # ------------------------------------------------------------------------------
 
