Added methods for qualifying donations via whisper

--- a/web/modules/custom/giv_din_stemme/giv_din_stemme.services.yml
+++ b/web/modules/custom/giv_din_stemme/giv_din_stemme.services.yml
@@ -18,3 +18,10 @@ services:
       - '@uuid'
       - '@state'
       - '@lock'
+
+  Drupal\giv_din_stemme\Drush\Commands\GivDinStemmeCommands:
+    arguments:
+      - '@http_client'
+      - '@entity_type.manager'
+      - '@database'
+      - '@file_system'
